# nojekyll

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  Licence.txt  README.md  README.rst  invoke.yaml  pyproject.toml  setup.py  tasks.py
minchin/pelican/plugins/: nojekyll.py
pelican/plugins/nojekyll/: __init__.py
test-site/: pelicanconf.py  publishconf.py  tasks.py
test-site/content/: welcome.rst
