[tool.poetry]
name = "pelican-nojekyll"
version = "2.0.0-dev"
description = "Pelican plugin that adds a ``.nojekyll`` file to the output root. Useful for publishing to Github Pages. Written in Python."
authors = ["William Minchin <w_minchin@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2 || ^3.7"
pelican = "^3 || ^4"

[tool.poetry.dev-dependencies]
black = {version = "^21.4b0", allow-prereleases = true}
flake8 = "^3.8"
invoke = "^1.3"
isort = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


readme = "README.rst"
keywords = ["GitHub pages", "pelican", "plugin"]
repository = "https://github.com/pelican-plugins/minchin.pelican.plugins.nojekyll"
documentation = "https://github.com/pelican-plugins/minchin.pelican.plugins.nojekyll/master/README.rst"
packages = [
    { include = "pelican" },
]
include = [
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.rst",
    "CONTRIBUTING.md",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Bug Tracker" = "https://github.com/pelican-plugins/minchin.pelican.plugins.nojekyll/issues"
"Changelog" = "https://github.com/pelican-plugins/minchin.pelican.plugins.nojekyll/master/CHANGELOG.rst"


[tool.autopub]
project-name = "NoJykell"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
changelog-file = "CHANGELOG.rst"
version-strings = ["pelican/plugins/nojekyll/__init__.py"]
changelog-header = "======================="
version-header = "-"

[tool.isort]
# Maintain compatibility with Black
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[tool.black]
line-length = 88
